# siyuan-mcp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  impl_status.md
.github/workflows/: ci.yaml  release.yaml
scripts/: convert_logseq_journals.py  convert_logseq_separator.py  move_at_pages_to_zotero.py  replace_logseq_journal_links.py  siyuan-quirks.md  stdio_smoke_test.py
src/: main.rs
